os werewolfs ja sabem quem sao os outros wws